--- a/ProjectControlling/Views/Shared/_Layout.cshtml
+++ b/ProjectControlling/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Create">Add project</a>
+                    </li>
                 </ul>
             </div>
         </div>
