--- a/ProjectControlling/Views/Shared/_Layout.cshtml
+++ b/ProjectControlling/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Create">Add project</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="Workers" asp-action="Index">All Workers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="Workers" asp-action="Create">Add Worker</a>
+                    </li>
                 </ul>
             </div>
         </div>
