--- a/ProjectControlling/Views/Workers/Create.cshtml
+++ b/ProjectControlling/Views/Workers/Create.cshtml
@@ -24,5 +24,6 @@
             <input asp-for="WorkerEmail" class="form-control"/>
         </div>
         <button type="submit" class="btn btn-primary">Add worker</button>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
